# semantic-ui

./: README.md
interface/client/: .env  .eslintrc.js  .gitignore  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
interface/client/assets/: .gitignore  spinner.css
interface/client/src/: App.tsx  index.tsx
kb/: button.scs  button1.scs  format_ui_json.scs
kb/section_subject_domain_of_interface_components/: section_subject_domain_interface_components.scs
kb/section_subject_domain_of_interface_user_actions/: section_subject_domain_of_interface_user_actions.scs
kb/ui_menu/: ui_main_menu.scs  ui_menu_na_example_commands.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/uiModule/: CMakeLists.txt  uiModule.cpp  uiModule.hpp
problem-solver/cxx/uiModule/agents/: JsonAgent.cpp  JsonAgent.hpp  JsonTranslateAgent.cpp  JsonTranslateAgent.hpp  UiActionProcessingAgent.cpp  UiActionProcessingAgent.hpp  UiJsonTranslationAgent.cpp  UiJsonTranslationAgent.hpp  UiJsonTranslator.cpp  UiJsonTranslator.hpp
problem-solver/cxx/uiModule/keynodes/: Keynodes.cpp  Keynodes.hpp  keynodes.cpp  keynodes.hpp
problem-solver/cxx/uiModule/specifications/agent_of_ui_action_processing/: desc_agent_of_ui_action_processing.md  lib_component_agent_of_ui_action_processing.scs  lib_component_ui_menu_ui_action_processing.scs  ui_menu_ui_action_processing.scsi
problem-solver/cxx/uiModule/specifications/agent_of_ui_json_search/: desc_agent_of_translate_ui_json.md  lib_component_agent_of_ui_json_search.scs  lib_component_ui_menu_translate_ui_json.scs  lib_component_ui_menu_ui_json_search.scs  ui_menu_translate_ui_json.scsi  ui_menu_ui_json_search.scsi
problem-solver/cxx/uiModule/test/: CMakeLists.txt  FileUtils.cpp  FileUtils.hpp  ui-translator-tests-starter.cpp
problem-solver/cxx/uiModule/test/json/: test_1.json  test_2.json  test_3.json
problem-solver/cxx/uiModule/test/testStructures/: test_button_1.scs  test_button_2.scs  test_button_3.scs  test_button_4.scs
problem-solver/cxx/uiModule/test/units/: TestUiJsonTranslationAgent.cpp
problem-solver/cxx/uiModule/utils/: SearchUtils.cpp  SearchUtils.hpp
scripts/: install_ostis.sh
(+127 files in other folders)
